# Autonomous-Youtube-analysis-agent

./: .env.example  .gitignore  README.md  adk_runner.py  adk_serving_guide.md  mcp_config.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  test_adk.py  youtube_agent.py
ace_system/: .env.example  CHANGELOG.md  Makefile  QUICKSTART.md  README.md  SETUP.md  config.py  main.py  pyproject.toml  requirements.txt  test_message_format.py
ace_system/agents/: youtube_agent.py
ace_system/agents/ace_agent/: agent.py
ace_system/agents/ace_agent/schemas/: __init__.py  delta.py  playbook.py
ace_system/agents/ace_agent/sub_agents/: __init__.py  curator.py  generator.py  reflector.py
ace_system/agents/youtube_agent/: agent.py
adk_agents/youtube_agent/: agent.py
agent-tools/: .env  .env.example  package-lock.json  package.json  tsconfig.json
agent-tools/src/: main.ts  youtube.app.ts
agent-tools/src/tools/: image-generator.tool.ts  thumbnail-generator.tool.ts  youtube-channel-analysis.tool.ts  youtube-search.tool.ts  youtube-upload.tool.ts  youtube-video-analysis.tool.ts
frontend/: .env.example  README copy.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/components/: AgentWorkflow.tsx  ChannelCard.tsx  ChatMessage.tsx
frontend/src/pages/: Index.tsx
frontend/src/services/: aceService.ts
src/: index.css
src/components/: ChannelCard.tsx
